alterado arquivo scripts.js

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="winning-messege" data-winning-messege>
         <p class="winning-messege-text" data-winning-messege-text>X Venceu!</p>
-        <button class="winning-messege-button">Reiniciar</button>
+        <button class="winning-messege-button" data-restart-button>Reiniciar</button>
     </div>
     <script src="./scripts.js"></script>
 </body>
